| Bug #19245 | Insert+Insert+rollback+rollback causes node failure | ||
|---|---|---|---|
| Submitted: | 21 Apr 2006 8:43 | Modified: | 23 Apr 2006 3:22 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Jonas Oreland | Target Version: | |
[21 Apr 2006 8:43]
Jonas Oreland
[21 Apr 2006 9:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/5252
[21 Apr 2006 16:47]
Tomas Ulin
pushed to 5.1.10
[23 Apr 2006 3:22]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.1.10 changelog; closed.
