ndb - bug#19245   A-insert/B-insert/A-rollback/B-rollback leads to node crash, as bits in tuple header gets incorrectly assigned in second insert   this also likely fixes bug 18589 and explains 18808

storage/ndb/src/kernel/blocks/dbtup/DbtupAbort.cpp:
  remove debug printout
storage/ndb/src/kernel/blocks/dbtup/DbtupExecQuery.cpp:
  Make sure that alloc bit is set if insert and first_op
storage/ndb/test/ndbapi/testBasic.cpp:
  testcase for bug#19245
storage/ndb/test/run-test/daily-basic-tests.txt:
  testcase for bug#19245